# ketchup_republic_solana

./: README.md
krp-aos/: README.md
krp-solana-client/: README.md  index.ts  krp-client.ts  package-lock.json  package.json
krp-solana-rust-contract/: Cargo.toml  README.md
krp-solana-rust-contract/src/: lib.rs
