[package]
name = "Ketchup Republic"
version = "0.1.0"
edition = "2021"



[lib]
name = "Ketchup Republic"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.3"
borsh = "1.3.1"
bs58 = "0.5.0"
arrayref = "0.3.6"
byteorder = "1.3"
rand = "0.8.4"
